# deeplearwing

./: LICENSE  README.md  pyproject.toml  training.ipynb
2d-airfoil-performances/src/: interpolate.py  plot.py  scrap.py
deeplearwing/: scrap.py  training.ipynb
deeplearwing/notebook/: training.ipynb  training2.ipynb
deeplearwing/src/: __init__.py  checkpoint.py  curvature_heatmap.py  features.py  plot.py  table_builder.py
deeplearwing/src/tests/: test_curvature_heatmap.py
mlfoil/: cts.py  features.py  plot.py  scrap.py  table_builder.py
