[tool.poetry]
name = "mlfoil"
version = "0.1.0"
description = ""
authors = ["victorien <victorienmichel3@gmail.com>"]
readme = "README.md"
packages = [
    { include = "mlfoil"},
    { include = "mlfoil/**/*.py"}
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
seaborn = "^0.13.2"
plotly = "^5.22.0"
datasets = "^2.20.0"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"